--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "frontend-shopping",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "i18next": "^23.12.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^14.1.3",
     "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
